--- a/webviewintegration/LandingViewController.xib
+++ b/webviewintegration/LandingViewController.xib
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="16097.2" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="17156" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17126"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -21,27 +23,21 @@
             <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Native elements" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="SW0-l6-DmN">
+                    <rect key="frame" x="16" y="60" width="382" height="18"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                    <nil key="textColor"/>
+                    <nil key="highlightedColor"/>
+                </label>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="SuO-f6-SyB">
-                    <rect key="frame" x="16" y="60" width="382" height="40"/>
+                    <rect key="frame" x="16" y="94" width="382" height="40"/>
                     <subviews>
-                        <button opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="D2p-JI-FQB">
-                            <rect key="frame" x="302" y="0.0" width="80" height="40"/>
-                            <color key="backgroundColor" red="0.93333333333333335" green="0.93333333333333335" blue="0.93333333333333335" alpha="1" colorSpace="calibratedRGB"/>
-                            <constraints>
-                                <constraint firstAttribute="width" constant="80" id="Nwg-Sq-kju"/>
-                            </constraints>
-                            <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                            <state key="normal" title="Clear All"/>
-                            <connections>
-                                <action selector="onClearAllButtonClicked:" destination="-1" eventType="touchUpInside" id="0aC-Rb-9rf"/>
-                            </connections>
-                        </button>
                         <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="16w-62-s0i">
                             <rect key="frame" x="0.0" y="0.0" width="213" height="40"/>
-                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="15"/>
                             <textInputTraits key="textInputTraits"/>
                         </textField>
-                        <button opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Qci-7w-SHa">
+                        <button opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Qci-7w-SHa">
                             <rect key="frame" x="221" y="0.0" width="80" height="40"/>
                             <color key="backgroundColor" red="0.93333333333333335" green="0.93333333333333335" blue="0.93333333333333335" alpha="1" colorSpace="calibratedRGB"/>
                             <constraints>
@@ -53,8 +49,20 @@
                                 <action selector="onAddButtonClicked:" destination="-1" eventType="touchUpInside" id="3sO-27-ovd"/>
                             </connections>
                         </button>
+                        <button opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="D2p-JI-FQB">
+                            <rect key="frame" x="302" y="0.0" width="80" height="40"/>
+                            <color key="backgroundColor" red="0.93333333333333335" green="0.93333333333333335" blue="0.93333333333333335" alpha="1" colorSpace="calibratedRGB"/>
+                            <constraints>
+                                <constraint firstAttribute="width" constant="80" id="Nwg-Sq-kju"/>
+                            </constraints>
+                            <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <state key="normal" title="Clear All"/>
+                            <connections>
+                                <action selector="onClearAllButtonClicked:" destination="-1" eventType="touchUpInside" id="0aC-Rb-9rf"/>
+                            </connections>
+                        </button>
                     </subviews>
-                    <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                    <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     <constraints>
                         <constraint firstItem="16w-62-s0i" firstAttribute="top" secondItem="SuO-f6-SyB" secondAttribute="top" id="0Wc-fj-KG8"/>
                         <constraint firstAttribute="trailing" secondItem="D2p-JI-FQB" secondAttribute="trailing" id="0Z8-G4-5Xb"/>
@@ -69,8 +77,21 @@
                         <constraint firstItem="D2p-JI-FQB" firstAttribute="top" secondItem="SuO-f6-SyB" secondAttribute="top" id="n8A-68-qYy"/>
                     </constraints>
                 </view>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="oeD-z9-gdi">
+                    <rect key="frame" x="0.0" y="150" width="414" height="1"/>
+                    <color key="backgroundColor" red="0.93333333330000001" green="0.93333333330000001" blue="0.93333333330000001" alpha="1" colorSpace="calibratedRGB"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="1" id="qpE-bW-iUq"/>
+                    </constraints>
+                </view>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Webview" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hUb-D7-Tun">
+                    <rect key="frame" x="16" y="167" width="382" height="18"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                    <nil key="textColor"/>
+                    <nil key="highlightedColor"/>
+                </label>
                 <wkWebView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="2aj-Vn-6x9">
-                    <rect key="frame" x="0.0" y="116" width="414" height="746"/>
+                    <rect key="frame" x="0.0" y="201" width="414" height="661"/>
                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <wkWebViewConfiguration key="configuration">
                         <audiovisualMediaTypes key="mediaTypesRequiringUserActionForPlayback" none="YES"/>
@@ -78,18 +99,32 @@
                     </wkWebViewConfiguration>
                 </wkWebView>
             </subviews>
-            <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+            <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
+            <color key="backgroundColor" systemColor="systemBackgroundColor"/>
             <constraints>
+                <constraint firstItem="oeD-z9-gdi" firstAttribute="top" secondItem="SuO-f6-SyB" secondAttribute="bottom" constant="16" id="0Gm-x4-Bbi"/>
+                <constraint firstItem="hUb-D7-Tun" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="16" id="2ex-fI-W7o"/>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="SuO-f6-SyB" secondAttribute="trailing" constant="16" id="6cW-HH-i1i"/>
                 <constraint firstItem="SuO-f6-SyB" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="16" id="CWb-Ef-sjg"/>
-                <constraint firstItem="2aj-Vn-6x9" firstAttribute="top" secondItem="SuO-f6-SyB" secondAttribute="bottom" constant="16" id="G5B-YD-Leo"/>
+                <constraint firstItem="oeD-z9-gdi" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="MQw-fU-M2d"/>
+                <constraint firstItem="SW0-l6-DmN" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" constant="16" id="Nxi-O3-7rm"/>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="2aj-Vn-6x9" secondAttribute="trailing" id="OzN-v2-5gV"/>
-                <constraint firstItem="SuO-f6-SyB" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" constant="16" id="ePy-Jw-CEA"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="oeD-z9-gdi" secondAttribute="trailing" id="W7C-Su-0Nm"/>
+                <constraint firstItem="SW0-l6-DmN" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="16" id="Xlx-0q-gRf"/>
+                <constraint firstItem="SuO-f6-SyB" firstAttribute="top" secondItem="SW0-l6-DmN" secondAttribute="bottom" constant="16" id="cK6-rv-rrY"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="SW0-l6-DmN" secondAttribute="trailing" constant="16" id="dPJ-LI-XgC"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="hUb-D7-Tun" secondAttribute="trailing" constant="16" id="drf-AN-gZR"/>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="bottom" secondItem="2aj-Vn-6x9" secondAttribute="bottom" id="gAg-Uq-lrq"/>
                 <constraint firstItem="2aj-Vn-6x9" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="uhQ-cj-6RB"/>
+                <constraint firstItem="2aj-Vn-6x9" firstAttribute="top" secondItem="hUb-D7-Tun" secondAttribute="bottom" constant="16" id="uox-5L-TX9"/>
+                <constraint firstItem="hUb-D7-Tun" firstAttribute="top" secondItem="oeD-z9-gdi" secondAttribute="bottom" constant="16" id="vMa-bt-ppI"/>
             </constraints>
-            <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
             <point key="canvasLocation" x="131.8840579710145" y="153.34821428571428"/>
         </view>
     </objects>
+    <resources>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+    </resources>
 </document>
