handle web to app messages

--- a/webviewintegration/LandingViewController.xib
+++ b/webviewintegration/LandingViewController.xib
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="17156" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="17506" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17126"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17505"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -13,6 +13,8 @@
             <connections>
                 <outlet property="addButton" destination="Qci-7w-SHa" id="4jC-3L-Fgo"/>
                 <outlet property="clearAllButton" destination="D2p-JI-FQB" id="J16-Tm-PXR"/>
+                <outlet property="nativeLabelTopLayoutConstraint" destination="Nxi-O3-7rm" id="Mcm-O8-HzI"/>
+                <outlet property="tableView" destination="1Bg-9w-Xjd" id="u2v-dK-IVs"/>
                 <outlet property="textField" destination="16w-62-s0i" id="nfD-k4-Fz6"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
                 <outlet property="webView" destination="2aj-Vn-6x9" id="LPx-AJ-7on"/>
@@ -77,21 +79,25 @@
                         <constraint firstItem="D2p-JI-FQB" firstAttribute="top" secondItem="SuO-f6-SyB" secondAttribute="top" id="n8A-68-qYy"/>
                     </constraints>
                 </view>
+                <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="none" allowsSelection="NO" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="1Bg-9w-Xjd">
+                    <rect key="frame" x="0.0" y="150" width="414" height="224"/>
+                    <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                </tableView>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="oeD-z9-gdi">
-                    <rect key="frame" x="0.0" y="150" width="414" height="1"/>
+                    <rect key="frame" x="0.0" y="374" width="414" height="1"/>
                     <color key="backgroundColor" red="0.93333333330000001" green="0.93333333330000001" blue="0.93333333330000001" alpha="1" colorSpace="calibratedRGB"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="1" id="qpE-bW-iUq"/>
                     </constraints>
                 </view>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Webview" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hUb-D7-Tun">
-                    <rect key="frame" x="16" y="167" width="382" height="18"/>
+                    <rect key="frame" x="16" y="391" width="382" height="18"/>
                     <fontDescription key="fontDescription" type="system" pointSize="15"/>
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
                 </label>
                 <wkWebView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="2aj-Vn-6x9">
-                    <rect key="frame" x="0.0" y="201" width="414" height="661"/>
+                    <rect key="frame" x="0.0" y="425" width="414" height="437"/>
                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <wkWebViewConfiguration key="configuration">
                         <audiovisualMediaTypes key="mediaTypesRequiringUserActionForPlayback" none="YES"/>
@@ -102,19 +108,23 @@
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
             <color key="backgroundColor" systemColor="systemBackgroundColor"/>
             <constraints>
-                <constraint firstItem="oeD-z9-gdi" firstAttribute="top" secondItem="SuO-f6-SyB" secondAttribute="bottom" constant="16" id="0Gm-x4-Bbi"/>
                 <constraint firstItem="hUb-D7-Tun" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="16" id="2ex-fI-W7o"/>
+                <constraint firstItem="1Bg-9w-Xjd" firstAttribute="top" secondItem="SuO-f6-SyB" secondAttribute="bottom" constant="16" id="3TN-56-XjD"/>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="SuO-f6-SyB" secondAttribute="trailing" constant="16" id="6cW-HH-i1i"/>
+                <constraint firstItem="1Bg-9w-Xjd" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="C4d-mB-1IT"/>
                 <constraint firstItem="SuO-f6-SyB" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="16" id="CWb-Ef-sjg"/>
                 <constraint firstItem="oeD-z9-gdi" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="MQw-fU-M2d"/>
                 <constraint firstItem="SW0-l6-DmN" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" constant="16" id="Nxi-O3-7rm"/>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="2aj-Vn-6x9" secondAttribute="trailing" id="OzN-v2-5gV"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="1Bg-9w-Xjd" secondAttribute="trailing" id="QP8-DG-NpX"/>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="oeD-z9-gdi" secondAttribute="trailing" id="W7C-Su-0Nm"/>
                 <constraint firstItem="SW0-l6-DmN" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="16" id="Xlx-0q-gRf"/>
                 <constraint firstItem="SuO-f6-SyB" firstAttribute="top" secondItem="SW0-l6-DmN" secondAttribute="bottom" constant="16" id="cK6-rv-rrY"/>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="SW0-l6-DmN" secondAttribute="trailing" constant="16" id="dPJ-LI-XgC"/>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="hUb-D7-Tun" secondAttribute="trailing" constant="16" id="drf-AN-gZR"/>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="bottom" secondItem="2aj-Vn-6x9" secondAttribute="bottom" id="gAg-Uq-lrq"/>
+                <constraint firstItem="oeD-z9-gdi" firstAttribute="top" secondItem="1Bg-9w-Xjd" secondAttribute="bottom" id="jrz-Nl-4Fw"/>
+                <constraint firstItem="1Bg-9w-Xjd" firstAttribute="height" secondItem="i5M-Pr-FkT" secondAttribute="height" multiplier="0.25" id="sXe-5T-Kw1"/>
                 <constraint firstItem="2aj-Vn-6x9" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="uhQ-cj-6RB"/>
                 <constraint firstItem="2aj-Vn-6x9" firstAttribute="top" secondItem="hUb-D7-Tun" secondAttribute="bottom" constant="16" id="uox-5L-TX9"/>
                 <constraint firstItem="hUb-D7-Tun" firstAttribute="top" secondItem="oeD-z9-gdi" secondAttribute="bottom" constant="16" id="vMa-bt-ppI"/>
